Revision history for Ocsinventory::Agent
       * Fix bug #1049626
       * Fix bug #1040197
       * Add detect CPU architecture
       * AIX memory module change
       * Add many informations about CPU(l2cachesize, status, socket designation, cores number)
       * Fix bug #1045356
       * Fix bug #807419
       * Fix bug #882574
       * Fix bug #984699
       * Fix bug #971983
       * Fix bug #571655
       * Retrieve family, serial number, number of processors, clockrate for BSDsystems
       * New module for inventoring Oracle databases
       * Multiples monitors patch added
       * Fix bug #1023670
       * New version of Gentoo.pm 
       * New Backend/Virtualization/Parallels.pm module for Parallels virtual machines inventory
       * Plugin Processes moved as module
       * Fix bug #911491 for BSD
       * Fix bug #873377 for Gentoo
       * Add OS/Linux/LVM.pm module for Logical Volume Manager support 
       * New Snmp/231.pm module for Fujistu devices
       * postinst.pl can now be launched in non-interactive mode using new "--nowizard" launch option
       * Adding all the configuration options as launching arguments in postinst.pl
       * Adding new interactive questions about "debug", "logfile", "ssl" and "ca" configuration options in postinst.pl
       * Download.pm uses LWP useragent initiated by Network.pm for SSL checks 
       * Download.pm uses LWP useragent initiated by Network.pm for info and frags files downloads
       * Network.pm can use LWP version 6 SSL useragent options
       * New --ca configuration option to specify a CA certificate path for SSL certificate checks 
       * New --ssl configuration option to enable/disable SSL certificate checks 
       * Customize SNMP scans using a special XML format received from server 
       * Getting network devices MAC address during SNMP scans
       * Availibity to scan any networks SNMP devices using nmap or ping scans
       * SNMP v3 available for SNMP scans